--- a/Pilares/PilaresParam.plist
+++ b/Pilares/PilaresParam.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>handler</key>
-	<string>http://www.weminipocket.weoneconsulting.com/weminipocket/handlers</string>
+	<string>http://www.mywepocket.com/handlers</string>
 </dict>
 </plist>
